scaling down for smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* App.css */
 body {
   background-color: black;
   color: white;
@@ -7,19 +6,27 @@ body {
   font-family: 'Atma', sans-serif;
   user-select: none;
   pointer-events: none;
-  display: flex; 
-  justify-content: center; 
-  align-items: center; 
-  height: 100vh; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.scale-content {
+  transform-origin: center center;
 }
 
 .app {
+  width: 600px;
+  height: 300px;
   text-align: center;
   padding: 2rem;
 }
 
 .title {
   font-size: 3rem;
+  margin-top: 0;
   margin-bottom: 2rem;
 }
 
